# donk

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/config/: config_test.yaml  global_config.rs
src/core/: settings.rs
