[package]
name = "donk"
version = "0.1.0"
author = ["ccbond <hgamiui9@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ccbond/donkey-clis"
description = "一个用于取代日常开发工作中会遇到的一些复杂的鼠标指令的命令行工具集"
keywords = ["cli", "efficiency"]
categories = ["tools"]
rust-version = "1.65"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.21.0", features = ["full"] }
clap = { version = "4.1.4", features = ["derive"]}
dirs-next = "2.0.0"